<resources>
    <string name="app_name">Seu Treino</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="workout_nav_title">Workouts</string>
    <string name="exercise_nav_title">Exercises</string>
    <string name="history_nav_title">History</string>
    <string name="settings_nav_title">Settings</string>


    <string name="exercise_name">Exercise name</string>
    <string name="observations">Observations</string>
    <string name="send_exercise">Save Exercise</string>

    <string name="create_workout_label">Create New Workout</string>
    <string name="workout_name_label">Workout Name</string>
    <string name="workout_description_label">Workout Description</string>
    <string name="avaible_exercises_label">Available Exercises:</string>
    <string name="add_workout_label">Add Workout</string>
    <string name="update_workout_label">Update Workout</string>
    <string name="update_exercise_label">Update Exercise</string>
    <string name="workout_exercises_label">Workout Exercises:</string>
    <string name="workout_details_label">Workout Details</string>

    <string-array name="duration_unit_options">
        <item>Minutes</item>
        <item>Seconds</item>
    </string-array>

    <string name="time_seconds_measure">s</string>
    <string name="pause_label">Pause</string>
    <string name="start_label">Start</string>
    <string name="interrupt_label">Interrupt</string>

    <string name="welcome_label">Welcome</string>
    <string name="sign_in_label">Login</string>
    <string name="sign_up_label">Register</string>
    <string name="sign_out_label">Logout</string>

    <string name="sign_name">Name</string>
    <string name="sign_birthday">Birthday</string>
    <string name="sign_email">Email</string>
    <string name="sign_password">Password</string>
    <string name="sign_confirm_password">Confirm Password</string>

    <string name="empty_field_warning">All fields must be filled.</string>
    <string name="invalid_email_warning">Invalid email given.</string>
    <string name="invalid_password_warning">Password must have at least 8 characters.</string>
    <string name="invalid_password_match">Password and confirm password do not match.</string>

    <string name="name_label">Name:</string>
    <string name="email_label">Email:</string>







</resources>