<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.auth.WelcomeFragment"

    android:padding="16dp">

    <TextView
        android:id="@+id/welcome_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_label"

        android:layout_marginTop="200dp"

        android:textStyle="bold"
        android:textSize="52sp"

        android:layout_centerHorizontal="true"
        />

    <Button
        android:id="@+id/sign_in_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="70dp"
        android:layout_marginBottom="20dp"

        android:backgroundTint="@color/green"

        android:text="@string/sign_in_label"
        android:textSize="25sp"
        android:textStyle="bold"


        android:layout_below="@id/welcome_label"

        />

    <Button
        android:id="@+id/sign_un_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"

        android:backgroundTint="@color/orange"

        android:text="@string/sign_up_label"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/black"


        android:layout_below="@id/sign_in_button"
        />


</RelativeLayout>