<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.workout.AddWorkoutFragment"
    android:paddingHorizontal="10dp"

    >

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"


        android:text="@string/create_workout_label"
        android:textSize="32sp"
        android:textStyle="bold"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/workout_name_layout"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="15dp"



        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/workout_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/workout_name_label"
            android:inputType="text"


            />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/workout_description_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"


        app:layout_constraintTop_toBottomOf="@id/workout_name_layout"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/workout_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/workout_description_label"
            android:inputType="textMultiLine"
            android:minLines="4"
            />

    </com.google.android.material.textfield.TextInputLayout>



    <TextView
        android:id="@+id/available_exercises_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/avaible_exercises_label"
        android:textSize="24sp"
        android:textStyle="bold"

        android:layout_marginTop="15dp"

        app:layout_constraintTop_toBottomOf="@id/workout_description_layout"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/available_exercises_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/available_exercises_label"
        app:layout_constraintBottom_toTopOf="@id/add_workout_button"

        android:layout_marginBottom="15dp"

        />


    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/add_workout_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="10dp"

        app:backgroundTint="@color/green"
        android:textColor="@color/white"

        android:text="@string/add_workout_label"
        android:textSize="21sp"
        android:textStyle="bold"

        android:layout_marginBottom="20dp"

        />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:indeterminateTint="@color/black"
        android:visibility="invisible"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>