<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.workout.WorkoutDetailFragment"
    android:paddingHorizontal="10dp">

    <TextView
        android:id="@+id/workout_detail_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"


        android:text="@string/workout_details_label"
        android:textSize="32sp"
        android:textStyle="bold"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/workout_name_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@id/workout_detail_title"

        android:layout_marginTop="15dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/workout_name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/workout_name_label"
            android:inputType="text"
            android:textAlignment="center"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/workout_description_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"


        app:layout_constraintTop_toBottomOf="@id/workout_name_layout"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/workout_description_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Descrição do Treino"
            android:inputType="textMultiLine"
            android:minLines="4" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/exercises_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/workout_exercises_label"
        android:textSize="18sp"
        android:textStyle="bold"

        android:layout_marginTop="15dp"

        app:layout_constraintTop_toBottomOf="@id/workout_description_layout"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/exercises_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/exercises_label"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/update_workout_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="10dp"

        app:backgroundTint="@color/orange"
        android:textColor="@color/black"

        android:text="@string/update_workout_label"
        android:textSize="18sp"
        android:textStyle="bold"

        android:layout_marginBottom="20dp"

        />
</androidx.constraintlayout.widget.ConstraintLayout>