<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.exercise.AddExerciseFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/exercise_image_card_view"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_margin="16dp"
        app:cardCornerRadius="10dp"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/exercise_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitCenter"
            android:src="@drawable/baseline_image_24"
            android:contentDescription="TODO" />

    </androidx.cardview.widget.CardView>

    <EditText
        android:id="@+id/exercise_name_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/exercise_name"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/exercise_image_card_view" />

    <EditText
        android:id="@+id/exercise_observations_input"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_margin="16dp"
        android:hint="@string/observations"
        android:inputType="textMultiLine"
        app:layout_constraintTop_toBottomOf="@id/exercise_name_input"
        app:maxLines="5"
        tools:layout_editor_absoluteX="16dp" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/submit_exercise_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|end"
        android:layout_margin="16dp"

        android:text="@string/send_exercise"
        android:textStyle="bold"
        android:backgroundTint="@color/green"
        android:textColor="@color/white"
        android:textSize="21sp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:indeterminateTint="@color/black"
        android:visibility="invisible"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
