<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.workout.StartWorkoutActivity"

    android:padding="20dp"
    >
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/toolbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        tools:ignore="MissingConstraints">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize" />

    </com.google.android.material.appbar.AppBarLayout>



    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="32sp"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/toolbar_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        />

    <LinearLayout
        android:id="@+id/buttons_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="30dp"
        android:gravity="center"

        app:layout_constraintTop_toBottomOf="@id/title"
        >

        <com.google.android.material.button.MaterialButton
            android:id="@+id/start_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_label"
            android:textSize="21sp"

            android:backgroundTint="@color/green"
            android:textStyle="bold"

            android:layout_marginEnd="10dp"

            android:visibility="gone"

            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/pause_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pause_label"
            android:textSize="21sp"

            android:layout_marginStart="10dp"

            android:backgroundTint="@color/orange"
            android:textStyle="bold"

            android:visibility="gone"

            />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/actual_exercise_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="30dp"
        android:gravity="center"

        app:layout_constraintTop_toBottomOf="@id/buttons_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/recyclerView">

        <TextView
            android:id="@+id/exercise_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:textStyle="bold"

            android:layout_marginEnd="10dp"

            android:textSize="21sp" />

        <TextView
            android:id="@+id/exercise_time_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"

            android:textStyle="bold"
            android:textSize="21sp"

            />

        <TextView
            android:id="@+id/exercise_time_measure_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_seconds_measure"

            android:visibility="gone"

            android:textStyle="bold"
            android:textSize="21sp"
            />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/actual_exercise_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:indeterminateTint="@color/black"
        android:visibility="invisible"

        app:layout_constraintBottom_toBottomOf="@+id/recyclerView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>